src/test/deca/context/invalid/provided/class31.deca
class A {
    int getX(){
        return this.x;
    }
}
{
   
}


